[gd_scene load_steps=9 format=3 uid="uid://cxndahbkcr7n2"]

[ext_resource type="Texture2D" uid="uid://ctxd0v28pjbav" path="res://assets/images/background.png" id="1_8v22i"]
[ext_resource type="Texture2D" uid="uid://bu7h0q3plkua8" path="res://assets/images/activities/activity_1.png" id="1_dd8vb"]
[ext_resource type="Script" path="res://scripts/score_challange_01.gd" id="1_xmrlt"]
[ext_resource type="Texture2D" uid="uid://cru2pdcaaqfo" path="res://assets/images/level_completed_styled.png" id="4_5im88"]
[ext_resource type="Texture2D" uid="uid://0cy0n14lbwkx" path="res://assets/icons/star-completed.png" id="5_d1ocb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1m7c5"]
bg_color = Color(0.878431, 0.772549, 0.745098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ws71r"]
bg_color = Color(0.482353, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdtdb"]
bg_color = Color(0.964706, 0.937255, 0.913725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.482353, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Challange" type="Node2D"]
z_index = 5
position = Vector2(460, 414)
script = ExtResource("1_xmrlt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -414.0
offset_right = 460.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 920.0
offset_bottom = 828.0
texture = ExtResource("1_8v22i")

[node name="Title" type="HBoxContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -458.0
offset_top = -333.0
offset_right = 462.0
offset_bottom = -264.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="title" type="Label" parent="Title"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 50
text = "Desafio 01"

[node name="Save" type="Button" parent="."]
offset_left = 101.0
offset_top = 253.0
offset_right = 273.0
offset_bottom = 317.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Enviar"

[node name="Back" type="Button" parent="."]
offset_left = -264.0
offset_top = 253.0
offset_right = -92.0
offset_bottom = 317.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Voltar"

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -460.0
offset_top = -205.0
offset_right = 460.0
offset_bottom = 240.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
text = "1. Qual será o resultado do seguinte código?"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_dd8vb")
stretch_mode = 3

[node name="Option_01" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
text = "A - 10"
alignment = 0

[node name="Option_02" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
text = "B - 20"
alignment = 0

[node name="Option_03" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
text = "C - 30"
alignment = 0

[node name="Option_04" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
text = "D - undefined"
alignment = 0

[node name="ConcludedChallange" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -414.0
offset_right = 460.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.784314)

[node name="Modal" type="ColorRect" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 145.0
offset_top = 216.0
offset_right = 775.0
offset_bottom = 521.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="Star1" type="TextureRect" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 145.0
offset_top = 216.0
offset_right = 775.0
offset_bottom = 277.0
texture = ExtResource("4_5im88")

[node name="Star3" type="TextureRect" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 420.0
offset_top = 160.0
offset_right = 500.0
offset_bottom = 240.0
texture = ExtResource("5_d1ocb")

[node name="Label" type="Label" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 145.0
offset_top = 323.0
offset_right = 775.0
offset_bottom = 372.0
theme_override_colors/font_color = Color(0.180392, 0.34902, 0.270588, 1)
theme_override_font_sizes/font_size = 35
text = "Desafio concluído"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Confirm" type="Button" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 390.0
offset_top = 416.0
offset_right = 530.0
offset_bottom = 466.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.180392, 0.34902, 0.270588, 1)
theme_override_colors/font_pressed_color = Color(0.678431, 0.752941, 0.694118, 1)
theme_override_colors/font_focus_color = Color(0.180392, 0.34902, 0.270588, 1)
theme_override_colors/font_color = Color(0.180392, 0.34902, 0.270588, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_1m7c5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ws71r")
theme_override_styles/normal = SubResource("StyleBoxFlat_gdtdb")
text = "OK"

[node name="IncorrectAnswer" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -414.0
offset_right = 460.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.784314)

[node name="Modal" type="ColorRect" parent="IncorrectAnswer"]
layout_mode = 0
offset_left = 146.0
offset_top = 237.0
offset_right = 776.0
offset_bottom = 542.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="Label" type="Label" parent="IncorrectAnswer"]
layout_mode = 0
offset_left = 145.0
offset_top = 323.0
offset_right = 775.0
offset_bottom = 372.0
theme_override_colors/font_color = Color(0.482353, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "resposta incorreta"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TryAgain" type="Button" parent="IncorrectAnswer"]
layout_mode = 0
offset_left = 360.0
offset_top = 415.0
offset_right = 560.0
offset_bottom = 465.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.482353, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_colors/font_focus_color = Color(0.482353, 0, 0, 1)
theme_override_colors/font_color = Color(0.482353, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_1m7c5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ws71r")
theme_override_styles/normal = SubResource("StyleBoxFlat_gdtdb")
text = "Tentar novamente"

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="ConcludedChallange/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="IncorrectAnswer/TryAgain" to="." method="_on_try_again_pressed"]
